manifests/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: site-wordpress
spec:
  rules:
  - host: site-wordpress.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
  tls:
  - hosts:
    - site-wordpress.tk
    - www.site-wordpress.tk
    secretName: site-wordpress-tls
